--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,333 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 0 50px 0 50px;
+  min-height: 293px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 33px;
+  list-style: circle;
+  text-underline-offset: 4px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.header__links-list-item:first-child {
+  list-style: none;
+}
+
+.header__logo {
+  display: block;
+  justify-content: center;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+.header__address {
+  max-width: 240px;
+  justify-self: end;
+  font-style: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  list-style: none;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24.3px;
+}
+
+.address__link {
+  text-underline-offset: 4px;
+}
+
+.cover {
+  position: relative;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-position: right;
+  background-repeat: no-repeat;
+  min-height: 757px;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 0;
+}
+
+h1 {
+  font-family: Raleway;
+  font-weight: 700;
+  font-weight: bold;
+  font-size: 100px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.cover__title {
+  padding: 165px 20px 76px 51px;
+  position: relative;
+  z-index: 1;
+  letter-spacing: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 18px;
+}
+
+.cover__title span {
+  display: block;
+  width: 100%;
+}
+
+.aligned-text_left {
+  text-align: left;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.cover__description {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 50px 50px 50px;
+}
+
+.cover__description-text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #fff;
+  word-spacing: 19px;
+  margin: 0;
+}
+
+.bet-button {
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  text-transform: uppercase;
+  font-family: Raleway;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.lots__heading {
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  padding: 180px 0px 27px 64px;
+}
+
+.lots {
+  padding: 0px, 24px;
+}
+
+.lots__card-list {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+  padding: 48px, 40px;
+}
+
+.card-link,
+.card {
+  height: 100%;
+  display: block;
+}
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-decoration: none;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 0;
+}
+
+.card__title,
+.card__text {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+}
+
+.card__title {
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  text-decoration: underline;
+  padding: 48px 40px 0 40px;
+}
+
+.card__text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  margin: 0 40px 48px 40px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.lots__look-more-link {
+  padding: 30px 0 0 64px;
+  display: inline-block;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 20px;
+  text-underline-offset: 5px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 25px;
+  align-items: start;
+  padding: 155px 24px 180px 24px;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.about__column-logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  padding: 100px 0px 100px 0px;
+}
+
+.about__text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.about__text-start-item {
+  padding-right: 5px;
+}
+
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  padding: 0 50px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-size: 18px;
+  padding: 0 50px 0 50px;
+  min-height: 180px;
+}
+
+.footer__address {
+  font-style: normal;
+  list-style: none;
+  line-height: 24.3px;
+  text-underline-offset: 4px;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__links-list-item {
+  list-style: none;
+  text-underline-offset: 4px;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
