--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,6 @@
 h1 {
   font-family: Raleway;
   font-weight: 700;
-  font-weight: bold;
   font-size: 100px;
   text-align: center;
   text-transform: uppercase;
@@ -131,7 +130,6 @@ h1 {
   font-size: 22px;
   line-height: 100%;
   text-align: center;
-  text-transform: uppercase;
   color: #fff;
 }
 
@@ -180,14 +178,6 @@ h1 {
   flex-direction: column;
   justify-content: space-between;
   text-decoration: none;
-}
-
-.overlay {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 0;
 }
 
 .card__title,
@@ -300,7 +290,7 @@ footer {
   font-family: Raleway;
   font-weight: 400;
   font-size: 18px;
-  padding: 0 50px 0 50px;
+  padding: 0 50px;
   min-height: 180px;
 }
 
