after first review

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 0 50px 0 50px;
-  min-height: 293px;
+  padding: 92px 50px 91px 50px;
 }
 
 .header__links-list {
@@ -11,7 +10,7 @@
   gap: 33px;
   list-style: circle;
   text-underline-offset: 4px;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 18px;
 }
@@ -52,27 +51,25 @@
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
-  min-height: 757px;
 }
 
 .overlay {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
   z-index: 0;
 }
 
-h1 {
-  font-family: Raleway;
+.cover__title {
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 100px;
   text-align: center;
   text-transform: uppercase;
   color: #fff;
-}
-
-.cover__title {
   padding: 165px 20px 76px 51px;
   position: relative;
   z-index: 1;
@@ -106,11 +103,11 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 50px 50px 50px;
+  padding: 32px 50px 50px 50px;
 }
 
 .cover__description-text {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
@@ -125,7 +122,7 @@ h1 {
   border: 1px solid #fff;
   padding: 12px 32px;
   text-transform: uppercase;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 500;
   font-size: 22px;
   line-height: 100%;
@@ -134,23 +131,20 @@ h1 {
 }
 
 .lots__heading {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
   padding: 180px 0px 27px 64px;
 }
 
-.lots {
-  padding: 0px, 24px;
-}
-
 .lots__card-list {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   gap: 25px;
+  padding: 0 24px;
 }
 
 .lots__card-list-item {
@@ -188,7 +182,7 @@ h1 {
 }
 
 .card__title {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 22px;
   line-height: 120%;
@@ -198,7 +192,7 @@ h1 {
 }
 
 .card__text {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
@@ -220,7 +214,7 @@ h1 {
 .lots__look-more-link {
   padding: 30px 0 0 64px;
   display: inline-block;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 20px;
   text-underline-offset: 5px;
@@ -261,7 +255,7 @@ h1 {
 }
 
 .about__title {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
@@ -269,7 +263,7 @@ h1 {
 }
 
 .about__text {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -282,14 +276,16 @@ footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: start;
-  padding: 0 50px;
+  padding: 0 50px 82px;
   font-family: Raleway;
   font-weight: 400;
   font-size: 18px;
-  min-height: 180px;
 }
 
 .footer__address {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   font-style: normal;
   list-style: none;
   line-height: 24.3px;
